--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
   },
   "github": "https://github.com/Squareknot/marionette.state.git",
   "dependencies": {
-    "backbone": "1.3.3",
-    "backbone.marionette": "^3.0.0",
+    "backbone": "1.0.0 - 1.2.3",
+    "backbone.marionette": "3.0.0",
     "underscore": "1.4.4 - 1.8.3"
   },
   "devDependencies": {
